--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,10 @@ a {
     padding-top: 20px;
 }
 
+.texto {
+    margin-left: 10px;
+}
+
 .seccion-novedades h2 {
     font-size: 22px;
     font-weight:700;
@@ -241,9 +245,9 @@ a {
     padding-left: 10px;
 }
 
-.imagenes-novedades {
-    width: 170px;
-    height: 170px;
+.imagen-novedades1 {
+    width: 100%;
+    max-width: 200px;
 }
 
 .seccion-teatro {
